Adding more links to insights

--- a/insight.html
+++ b/insight.html
@@ -127,7 +127,9 @@
               Find quick and nutritious snack ideas that keep you energized on
               the go.
             </p>
-            <a href="https://www.eatthis.com/grab-and-go" class="btn">Read More</a>
+            <a href="https://www.eatthis.com/grab-and-go" class="btn"
+              >Read More</a
+            >
           </article>
 
           <article class="insight-card">
@@ -135,7 +137,53 @@
             <p>
               Learn the best practices for staying hydrated throughout the day.
             </p>
-            <a href="#read-more" class="btn">Read More</a>
+            <a
+              href="https://www.heart.org/en/healthy-living/fitness/fitness-basics/staying-hydrated-staying-healthy"
+              class="btn"
+              >Read More</a
+            >
+          </article>
+
+          <article class="insight-card">
+            <h3>Nutritionists vs. Dietitians</h3>
+            <p>A common mistake, understand the difference between the two.</p>
+            <a
+              href="https://www.goodrx.com/well-being/diet-nutrition/dietitian-vs-nutritionist"
+              class="btn"
+              >Read More</a
+            >
+          </article>
+
+          <article class="insight-card">
+            <h3>Simple Ways To Stick To A Diet</h3>
+            <p>
+              Starting a diet is one thing, sticking to it a whole other thing.
+            </p>
+            <a
+              href="https://www.healthline.com/nutrition/14-ways-to-stick-to-a-diet"
+              class="btn"
+              >Read More</a
+            >
+          </article>
+
+          <article class="insight-card">
+            <h3>How To Lose Weight Naturally</h3>
+            <p>Things to note down in order to attain a healthy life-style.</p>
+            <a
+              href="https://www.healthline.com/nutrition/30-ways-to-lose-weight-naturally"
+              class="btn"
+              >Read More</a
+            >
+          </article>
+
+          <article class="insight-card">
+            <h3>Diet And Weight Loss</h3>
+            <p>Learn more on dieting and weight loss with Harvard Health.</p>
+            <a
+              href="https://www.health.harvard.edu/topics/diet-and-weight-loss"
+              class="btn"
+              >Read More</a
+            >
           </article>
         </div>
       </section>
