--- a/contactUs.html
+++ b/contactUs.html
@@ -16,7 +16,7 @@
         <ul class="nav-list" id="nav-list">
           <li>
             <!-- <i class="fas fa-bars"></i> -->
-            <a href="">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li><a href="diet-plan.html">Diet Plan</a></li>
           <li><a href="insight.html">Insights</a></li>
