Adding final touches

--- a/insight.html
+++ b/insight.html
@@ -78,10 +78,12 @@
     <main id="main-Container">
       <section class="container insight">
         <header>
-          <h2>Nutrition Insights</h2>
+          <h1>Nutrition Insights</h1>
           <p>
-            Stay informed with the latest nutrition tips, healthy recipes, and
-            expert advice.
+            <strong
+              >Stay informed with the latest nutrition tips, healthy recipes,
+              and expert advice.</strong
+            >
           </p>
         </header>
 
