made the links in insights to be target=blank

--- a/insight.html
+++ b/insight.html
@@ -94,7 +94,9 @@
               Dieting is more than just a temporary change in eating habits;
               it’s a structured approach to nourishing your body based...
             </p>
-            <a href="Article-dieting_intro.html" class="btn">Read More</a>
+            <a href="Article-dieting_intro.html" target="_blank" class="btn"
+              >Read More</a
+            >
           </article>
 
           <article class="insight-card">
@@ -105,6 +107,7 @@
             </p>
             <a
               href="https://www.healthline.com/health/food-nutrition/foods-that-boost-the-immune-system"
+              target="_blank"
               class="btn"
               >Read More</a
             >
@@ -118,6 +121,7 @@
             </p>
             <a
               href="https://www.who.int/news-room/fact-sheets/detail/healthy-diet"
+              target="_blank"
               class="btn"
               >Read More</a
             >
@@ -129,7 +133,10 @@
               Find quick and nutritious snack ideas that keep you energized on
               the go.
             </p>
-            <a href="https://www.eatthis.com/grab-and-go" class="btn"
+            <a
+              href="https://www.eatthis.com/grab-and-go"
+              target="_blank"
+              class="btn"
               >Read More</a
             >
           </article>
@@ -141,6 +148,7 @@
             </p>
             <a
               href="https://www.heart.org/en/healthy-living/fitness/fitness-basics/staying-hydrated-staying-healthy"
+              target="_blank"
               class="btn"
               >Read More</a
             >
@@ -151,6 +159,7 @@
             <p>A common mistake, understand the difference between the two.</p>
             <a
               href="https://www.goodrx.com/well-being/diet-nutrition/dietitian-vs-nutritionist"
+              target="_blank"
               class="btn"
               >Read More</a
             >
@@ -163,6 +172,7 @@
             </p>
             <a
               href="https://www.healthline.com/nutrition/14-ways-to-stick-to-a-diet"
+              target="_blank"
               class="btn"
               >Read More</a
             >
@@ -173,6 +183,7 @@
             <p>Things to note down in order to attain a healthy life-style.</p>
             <a
               href="https://www.healthline.com/nutrition/30-ways-to-lose-weight-naturally"
+              target="_blank"
               class="btn"
               >Read More</a
             >
@@ -183,6 +194,7 @@
             <p>Learn more on dieting and weight loss with Harvard Health.</p>
             <a
               href="https://www.health.harvard.edu/topics/diet-and-weight-loss"
+              target="_blank"
               class="btn"
               >Read More</a
             >
