Fixed and cleaned up 'Article-dieting_intro.html'

--- a/Article-dieting_intro.html
+++ b/Article-dieting_intro.html
@@ -27,6 +27,7 @@
 
     .article-container {
       flex-direction: row;
+      padding: 100px 200px 50px 20px;
     }
 
     .article {
@@ -153,7 +154,7 @@
         </article>
         <br>
         <h2 id="important">Why is Dieting Important?</h2>
-        <img src="assets/fresh-vegetable-salad-with-grilled-meat-avocado-generative-ai.jpg" alt="">
+        <img src="assets/Keto-Diet.jpg" alt="">
         <p>
           Dieting has profound effects on both physical and mental health. At its core, the foods you consume directly
           impact your
@@ -174,7 +175,7 @@
         </p>
         <br>
         <h2 id="started">How to Start a Diet and Stick to It?</h2>
-        <img src="assets/fresh-vegetable-salad-with-grilled-meat-avocado-generative-ai.jpg" alt="">
+        <img src="assets/weight-loss.jpeg" alt="">
         <p>
           Starting a diet can be intimidating, but it’s important to view it
           as a journey, not a destination. The key to
