Removed footer from contactUs.html

--- a/Article-dieting_intro.html
+++ b/Article-dieting_intro.html
@@ -105,8 +105,8 @@
         </li>
         <li><a href="diet-plan.html">Diet Plan</a></li>
         <li><a href="insight.html" id="active">Insights</a></li>
-        <li><a href="">Dieticians</a></li>
-        <li><a href="contact.html" class="btn">Contact Us</a></li>
+        <li><a href="dieticians.html">Dieticians</a></li>
+        <li><a href="contactUs.html" class="btn">Contact Us</a></li>
       </ul>
       <div class="action-btn-container">
         <div class="user-profile">
