--- a/diet-plan.html
+++ b/diet-plan.html
@@ -62,11 +62,11 @@
         <!-- Feature card -->
         <div class="dietPlan-card">
           <div class="img">
-            <img src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg" alt="">
+            <img src="assets/dash-diet.jpeg" alt="">
           </div>
           <div class="text">
-            <h4>Keto Diet</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+            <h4>DASH Diet</h4>
+            <p>Low-salt, nutrient-rich diet aimed at lowering blood pressure.</p>
             <br>
             <a href="#contact" class="btn">Get Started</a>
           </div>
@@ -75,11 +75,11 @@
         <!-- Feature card -->
         <div class="dietPlan-card">
           <div class="img">
-            <img src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg" alt="">
+            <img src="assets/flax-diet.jpeg" alt="">
           </div>
           <div class="text">
-            <h4>Mediatorial Diet </h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+            <h4>Flexitarian Diet</h4>
+            <p>Primarily plant-based diet with occasional meat or fish.</p>
             <br>
             <a href="#contact" class="btn">Get Started</a>
           </div>
@@ -87,10 +87,10 @@
 
         <!-- Diet Plan card -->
         <div class="dietPlan-card">
-          <div class="img"><img src="assets/fresh-salad-wooden-bowl-lunch-generative-ai.jpg" alt=""></div>
+          <div class="img"><img src="assets/mind-diet.jpg" alt=""></div>
           <div class="text">
-            <h4>Vegan Diet</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore!</p>
+            <h4>MIND Diet</h4>
+            <p>Combines Mediterranean and DASH diets to support brain health.</p>
             <br>
             <a href="#contact" class="btn">Get Started</a>
           </div>
@@ -98,10 +98,10 @@
 
         <!-- Diet Plan card -->
         <div class="dietPlan-card">
-          <div class="img"><img src="assets/weight-loss.jpeg" alt=""></div>
+          <div class="img"><img src="assets/fruit-diet.jpeg" alt=""></div>
           <div class="text">
-            <h3>Weight Loss Plan</h3>
-            <p>A balanced plan to help you shed those extra pounds.</p>
+            <h3>Fruitarian Diet</h3>
+            <p>Diet primarily of raw fruits, with limited nuts and seeds.</p>
             <br>
             <a href="#contact" class="btn">Get Started</a>
           </div>
@@ -129,6 +129,7 @@
           </div>
         </div>
 
+         <!-- Diet Plan card -->
         <div class="dietPlan-card">
           <div class="img">
             <img src="assets/vegan-diet.jpeg" alt="Vegan Diet">
@@ -140,6 +141,17 @@
             <a href="#contact" class="btn">Get Started</a>
           </div>
         </div>
+
+         <!-- Diet Plan card 
+        <div class="dietPlan-card">
+          <div class="img"><img src="assets/weight-loss.jpeg" alt=""></div>
+          <div class="text">
+            <h3>Create Your Own!</h3>
+            <p>Create your own personalized plan!</p>
+            <br>
+            <a href="#contact" class="btn">Create +</a>
+          </div>
+        </div> -->
       </div>
       <!-- <a href="diet-plan.html" class="btn">Explore More</a> -->
     </section>
