--- a/diet-plan.html
+++ b/diet-plan.html
@@ -142,7 +142,7 @@
           </div>
         </div>
 
-         <!-- Diet Plan card 
+         <!-- Diet Plan card -->
         <div class="dietPlan-card">
           <div class="img"><img src="assets/weight-loss.jpeg" alt=""></div>
           <div class="text">
@@ -151,7 +151,7 @@
             <br>
             <a href="#contact" class="btn">Create +</a>
           </div>
-        </div> -->
+        </div>
       </div>
       <!-- <a href="diet-plan.html" class="btn">Explore More</a> -->
     </section>
