setting the stage for the index-2.html

--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="assets/diet_logo_t.png">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/diet-plan.css">
-  <link rel="stylesheet" href="styles/insight.css">
+  <link rel="stylesheet" href="login.html">
   <!-- <link rel="stylesheet" href="styles/test.css"> -->
   <link rel="stylesheet" href="styles/dashboard/dashboard.css">
 
@@ -264,14 +264,9 @@
       <li><a href="#dashboard" class="active" onclick="showSection('dashboard')"><i class="fas fa-tachometer-alt"></i>
           Dashboard </a></li>
       <li><a href="#diet-plans" onclick="showSection('diet-plans')"><i class="fas fa-utensils"></i> Diet Plans</a></li>
-      <li><a href="#insights" onclick="showSection('insights')"><i class="fas fa-chart-line"></i> Insights</a></li>
-      <li><a href="#dieticians" onclick="showSection('dieticians')"><i class="fas fa-users"></i> Dieticians</a></li>
       <li><a href="#settings" onclick="showSection('settings')"><i class="fas fa-cog"></i> Settings</a></li>
-      <li><a href="#logout" onclick="showSection('logout')"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+      <li><a href="login.html" ><i class="fas fa-sign-out-alt"></i> Logout</a></li>
     </ul>
-    <div class="user-profile">
-      <img src="assets/img-1.jpg" alt="user-profile">
-    </div>
   </aside>
 
   <main class="main-content" id="mainContainer">
