--- a/index-2.html
+++ b/index-2.html
@@ -62,9 +62,9 @@
           <!-- <i class="fas fa-bars"></i> -->
           <a href="" id="active">Home</a>
         </li>
-        <li><a href="sign-up.html">Diet Plan</a></li>
-        <li><a href="sign-up.html">Insights</a></li>
-        <li><a href="sign-up.html">Dieticians</a></li>
+        <li><a href="diet-plan.html">Diet Plan</a></li>
+        <li><a href="insight.html">Insights</a></li>
+        <li><a href="dieticians.html">Dieticians</a></li>
         <li><a href="contactUs.html" class="btn">Contact Us</a></li>
       </ul>
       <div class="action-btn-container">
@@ -83,13 +83,9 @@
     <section class="container hero">
       <div class="hero-bg">
         <div class="hero-text" data-aos="zoom-in-up">
-          <h1>NourishWise</h1>
+          <h1>Welcome To NourishWise!</h1>
           <h3>Eat Smart, Live Well</h3>
-          <p>Your Journey to Wellness Start Here!</p>
-          <div class="btn action-btn">
-            <a href="sign-up.html">GET STARTED</a>
-            <i class="fa-solid fa-arrow-right"></i>
-          </div>
+          <p>Your Journey to Wellness Has Already Begun!</p>
         </div>
       </div>
     </section>
@@ -101,7 +97,7 @@
           <div>
             <!-- About header -->
             <header>
-              <h2>Welcome to NourishWise!</h2>
+              <h2>NourishWise</h2>
             </header>
 
             <p class="aboutTxt">
@@ -221,7 +217,7 @@
           </div>
         </div>
       </div>
-      <a href="sign-up.html" class="btn">Explore More</a>
+      <a href="diet-plan.html" class="btn">Explore More</a>
     </section>
 
     <!-- =========================== Testimonial SECTION ===========================-->
@@ -331,7 +327,7 @@
           sign up and get started today!
         </p>
         <br /><br />
-        <a href="sign-up.html" class="btn">Get Started</a>
+        <a href="insight.html" class="btn"> Explore</a>
       </header>
       <ul class="text" data-aos="zoom-in-up">
         <li>
@@ -350,7 +346,8 @@
             <h1>2</h1>
           </div>
           <p>
-            <strong>Prepare your target goals: </strong>Make sure to keep inmind what exactly you are looking for.
+            <strong>Choose your goal: </strong>Let us know your health goal,
+            preferences, and any dietary restrictions.
           </p>
         </li>
         <li>
@@ -359,7 +356,7 @@
             <h1>3</h1>
           </div>
           <p>
-            <strong>Get your plan: </strong>Create a custom plan tailored for
+            <strong>Get your plan: </strong>Receive a custom plan tailored for
             you.
           </p>
         </li>
@@ -381,13 +378,13 @@
     <section class="container cta">
       <div class="cta-content">
         <div class="left">
-          <h2>Join Us Today!</h2>
+          <h2>Welcome aboard!</h2>
           <p>
-            Sign up now and take the first step towards achieving your goals!
+            You have taken your very first step towards achieving your goals!
           </p>
         </div>
         <div class="right">
-          <a href="sign-up.html" class="cta-button">Get Started</a>
+          <a href="insight.html" class="cta-button">Explore</a>
         </div>
       </div>
     </section>
