--- a/login.html
+++ b/login.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NourishWise | Login</title>
+    <link rel="stylesheet" href="styles/login_sign-up.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NourishWise | Login</title>
-  <link rel="stylesheet" href="styles/login_sign-up.css" />
-</head>
+  <body>
+    <div class="container login-container">
+      <h1>
+        Welcome Back To <br />
+        NourishWise!
+      </h1>
+      <div class="diet-logo">
+        <img src="assets/diet_logo_t.png" alt="diet-logo" />
+      </div>
+      <form action="index-2.html" class="styled-form">
+        <input
+          type="email"
+          id="inUsr"
+          placeholder="Enter your email"
+          required
+        />
+        <input
+          type="password"
+          id="inPass"
+          placeholder="Enter your password"
+          required
+        />
 
-<body>
-  <div class="container login-container">
-    <h1>
-      Welcome Back To <br />
-      NourishWise!
-    </h1>
-    <div class="diet-logo">
-      <img src="assets/diet_logo_t.png" alt="diet-logo" />
+        <span class="signup">
+          <a href="forget-form.html" id="forgotLabel">Forgot password?</a>
+        </span>
+
+        <button type="button" class="loginbtn button">Login</button>
+
+        <p class="login-p">
+          New to NourishWise? <br />Sign Up <a href="sign-up.html">here!</a>
+        </p>
+      </form>
     </div>
-    <form class="styled-form">
-      <input type="email" id="inUsr" placeholder="Enter your email" required>
-      <input type="password" id="inPass" placeholder="Enter your password" required>
 
-      <span class="signup">
-        <a href="forget-form.html" id="forgotLabel">Forgot password?</a>
-      </span>
-
-      <button type="button" class="loginbtn button">Login</button>
-
-      <p class="login-p">
-        New to NourishWise? <br />Sign Up <a href="sign-up.html">here!</a>
-      </p>
-    </form>
-  </div>
-
-  <script>
-
-  </script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-  <script src="script/Login.js" type="module"></script>
-
-</body>
-
+    <script></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="script/Login.js" type="module"></script>
+  </body>
 </html>
