Fixing the sign up and log in button

--- a/login.html
+++ b/login.html
@@ -33,11 +33,12 @@
         <span class="signup">
           <a href="forget-form.html" id="forgotLabel">Forgot password?</a>
         </span>
-
-        <button type="button" class="loginbtn button">Login</button>
-
+        <br />
+        <br />
+        <input type="submit" class="loginbtn button" value="Login" />
+        <br />
         <p class="login-p">
-          New to NourishWise? <br />Sign Up <a href="sign-up.html">here!</a>
+          New to NourishWise? Sign Up <a href="sign-up.html">here!</a>
         </p>
       </form>
     </div>
