--- a/sign-up.html
+++ b/sign-up.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="form-group">
-          <input type="button" class="button signupbtn" value="Signup" />
+          <input type="submit" class="button signupbtn" value="Signup" />
         </div>
       </form>
 
