--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         <li><a href="contactUs.html" class="btn">Contact Us</a></li>
       </ul>
       <div class="action-btn-container">
-        <div class="user-profile">
+        <a href="customer-dashboard.html" class="user-profile">
           <img src="assets/img-1.jpg" alt="user-profile" />
-        </div>
-        <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
-          <i class="fas fa-bars">=</i>
-        </div>
+        </a>
+      <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
+        <i class="fas fa-bars">=</i>
+      </div>
       </div>
     </nav>
   </header>
