--- a/index-2.html
+++ b/index-2.html
@@ -230,7 +230,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide">
             <div class="img">
-              <img src="assets/img-1.jpg" alt="Mohammed Super" />
+              <img src="assets/tech-inspire.PNG" alt="Mohammed Super" />
             </div>
             <div class="text">
               <h4>Mohammed Super</h4>
@@ -246,7 +246,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide">
             <div class="img">
-              <img src="assets/img-1.jpg" alt="Igbokwe Valerie" />
+              <img src="assets/miko.jpeg" alt="Igbokwe Valerie" />
             </div>
             <div class="text">
               <h4>Igbokwe Valerie</h4>
@@ -261,7 +261,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide" data-aos="zoom-in-up">
             <div class="img">
-              <img src="assets/img-1.jpg" alt="Ahmed.I" />
+              <img src="assets/ahmed.jpg" alt="Ahmed.I" />
             </div>
             <div class="text">
               <h4>Ahmed.I</h4>
@@ -276,7 +276,7 @@
           <!-- Testimonial Card Start -->
           <div class="testimonial-card swiper-slide">
             <div class="img">
-              <img src="assets/img-1.jpg" alt="Progress 4" />
+              <img src="assets/isha.jpeg" alt="Progress 4" />
             </div>
             <div class="text">
               <h4>Isha</h4>
