linking contact us to index-2.html

--- a/contactUs.html
+++ b/contactUs.html
@@ -39,7 +39,7 @@
     <!-- =========================== FORM SECTION ===========================-->
     <div class="contact-container">
       <h1>Contact Us</h1>
-      <form action="index.html" class="contactUs-form">
+      <form action="index-2.html" class="contactUs-form">
         <div class="field-container">
           <input
             type="text"
