--- a/diet-plan.html
+++ b/diet-plan.html
@@ -31,7 +31,7 @@
         <img src="assets/diet_logo_t.png" alt="NourishWise logo">
       </div>
       <ul class="nav-list" id="nav-list">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index-2.html">Home</a></li>
         <li><a href="#" id="active">Diet Plan</a></li>
         <li><a href="insight.html">Insights</a></li>
         <li><a href="detictian.html">Dieticians</a></li>
