linking insights to index-2.html

--- a/insight.html
+++ b/insight.html
@@ -58,7 +58,7 @@
           <img src="assets/diet_logo_t.png" alt="NourishWise logo" />
         </div>
         <ul class="nav-list" id="nav-list">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index-2.html">Home</a></li>
           <li><a href="diet-plan.html">Diet Plan</a></li>
           <li><a href="#" id="active">Insights</a></li>
           <li><a href="dieticians.html">Dieticians</a></li>
