--- a/dieticians.html
+++ b/dieticians.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NourishWise Dieticians</title>
-    <link rel="stylesheet" href="styles/dieticians.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/dieticians.css" />
+  </head>
+  <body>
     <h1>Coming Soon. . .</h1>
-    <a href="customer-dashboard.html">Go back to home</a>
-</body>
+    <a href="index-2.html">Go back to home</a>
+  </body>
 </html>
