--- a/dieticians.html
+++ b/dieticians.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Coming Soon. . .</h1>
-    <a href="index-2.html">Go back to home</a>
+    <a href="index-2.html">Go back to Home</a>
   </body>
 </html>
