trying to fix gotgot password page

--- a/forget-form.html
+++ b/forget-form.html
@@ -14,7 +14,7 @@
       <header>Forgot Password</header>
       <form action="#">
         <input type="text" id='forgotinp' placeholder="Enter your email">
-        <input type="button" class="button forgotbtn" value="Submit">
+        <input type="submit" class="button forgotbtn" value="Submit">
       </form>
       <span class="signup">Don't have an account?
         <a href="sign-up.html">Signup</a>
