added a fav icon as default profile image

--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
       </ul>
       <div class="action-btn-container">
         <a href="customer-dashboard.html" class="user-profile">
-          <img src="assets/img-1.jpg" alt="user-profile" />
+          <!-- <img src="assets/img-1.jpg" alt="user-profile" /> -->
+          <i class="fas fa-user"></i>
         </a>
-      <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
-        <i class="fas fa-bars">=</i>
-      </div>
+        <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
+          <i class="fas fa-bars">=</i>
+        </div>
       </div>
     </nav>
   </header>
