edited the 'why choose nourishwise?' section

--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
           <!-- Feature card -->
           <div class="feature-card">
             <div class="img">
-              <i class="fas fa-utensils"></i>
+              <i class="fas fa-search"></i>
             </div>
             <div class="text">
-              <h4>Access to Expert Dieticians</h4>
+              <h4>Access To Insights</h4>
               <p>
-                Access a variety of healthy recipes to support your diet and
-                fitness goals.
+                Access a variety of proven health tips to guide you through to your
+                diet and fitness goals.
               </p>
             </div>
           </div>
