Made the profile to be accesable only after login (in index-2.html)

--- a/diet-plan.html
+++ b/diet-plan.html
@@ -149,7 +149,7 @@
             <h3>Create Your Own!</h3>
             <p>Create your own personalized plan!</p>
             <br>
-            <a href="" class="btn">Create +</a>
+            <a href="personal-dietPlan.html" class="btn">Create +</a>
           </div>
         </div>
       </div>
