--- a/diet-plan.html
+++ b/diet-plan.html
@@ -37,13 +37,14 @@
         <li><a href="detictian.html">Dieticians</a></li>
         <li><a href="contactUs.html" class="btn">Contact Us</a></li>
       </ul>
-      <div class="action-btn-container">
-        <div class="user-profile">
-          <img src="assets/img-1.jpg" alt="user-profile">
-        </div>
-        <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
-          <i class="fas fa-bars">=</i>
-        </div>
+        <div class="action-btn-container">
+          <a href="customer-dashboard.html" class="user-profile">
+            <!-- <img src="assets/img-1.jpg" alt="user-profile" /> -->
+            <i class="fas fa-user"></i>
+          </a>
+          <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
+            <i class="fas fa-bars">=</i>
+          </div>
       </div>
     </nav>
   </header>
