--- a/contactUs.html
+++ b/contactUs.html
@@ -26,9 +26,10 @@
           </li>
         </ul>
         <div class="action-btn-container">
-          <div class="user-profile">
-            <img src="assets/img-1.jpg" alt="user-profile" />
-          </div>
+          <a href="customer-dashboard.html" class="user-profile">
+            <!-- <img src="assets/img-1.jpg" alt="user-profile" /> -->
+            <i class="fas fa-user"></i>
+          </a>
           <div class="menu-toggle" id="mobile-menu" onclick="toggleNavbar()">
             <i class="fas fa-bars">=</i>
           </div>
