--- a/sign-up.html
+++ b/sign-up.html
@@ -1,77 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NourishWise | Sign-up</title>
-    <link rel="stylesheet" href="styles/login_sign-up.css" />
-  </head>
 
-  <body>
-    <div class="container signup-container">
-      <div class="form-header">
-        <h1>Create Your Account</h1>
-        <div class="diet-logo">
-          <img src="assets/diet_logo_t.png" alt="NourishWise Logo" />
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NourishWise | Sign-up</title>
+  <link rel="stylesheet" href="styles/login_sign-up.css" />
+</head>
+
+<body>
+  <div class="container signup-container">
+    <div class="form-header">
+      <h1>Create Your Account</h1>
+      <div class="diet-logo">
+        <img src="assets/diet_logo_t.png" alt="NourishWise Logo" />
       </div>
-
-      <form action="index-2.html" class="styled-form">
-        <div class="form-group">
-          <input
-            type="text"
-            id="name"
-            placeholder="Enter your full name"
-            minlength="3"
-            required
-          />
-        </div>
-
-        <div class="form-group">
-          <input
-            type="email"
-            id="email"
-            placeholder="Enter your email"
-            required
-          />
-        </div>
-
-        <div class="form-group">
-          <input
-            type="password"
-            id="password"
-            placeholder="Password"
-            minlength="6"
-            required
-          />
-        </div>
-
-        <div class="form-group">
-          <input type="number" id="weight" placeholder="Your weight (kg)" />
-          <input type="number" id="height" placeholder="Your height (cm)" />
-        </div>
-
-        <div class="form-group">
-          <select id="role" required>
-            <option value="" disabled selected>Select role</option>
-            <option value="customer">Customer</option>
-            <option value="dietitian">Dietitian</option>
-          </select>
-        </div>
-
-        <div class="form-group">
-          <input type="submit" class="button signupbtn" value="Signup" />
-        </div>
-      </form>
-
-      <p class="sign-up-p">
-        Already registered? <a href="login.html">Log in here!</a>
-      </p>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="script/Signup.js" type="module"></script>
-  </body>
+    <form class="styled-form">
+      <div class="form-group">
+        <input type="file" id="profileImage" accept="image/*" required />
+      </div>
+
+      <div class="form-group">
+        <input type="text" id="name" placeholder="Enter your full name" minlength="3" required />
+      </div>
+
+      <div class="form-group">
+        <input type="email" id="email" placeholder="Enter your email" required />
+      </div>
+
+      <div class="form-group">
+        <input type="password" id="password" placeholder="Password" minlength="6" required />
+      </div>
+
+      <div class="form-group">
+        <input type="number" id="weight" placeholder="Your weight (kg)" />
+        <input type="number" id="height" placeholder="Your height (cm)" />
+      </div>
+
+      <div class="form-group">
+        <select id="role" required>
+          <option value="" disabled selected>Select role</option>
+          <option value="customer">Customer</option>
+          <option value="dietitian">Dietitian</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <input type="submit" class="button signupbtn" value="Signup" />
+      </div>
+    </form>
+
+    <p class="sign-up-p">
+      Already registered? <a href="login.html">Log in here!</a>
+    </p>
+  </div>
+
+  
+  <!-- Firebase SDKs -->
+  <!-- necessary for Firebase services -->
+  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-storage.js"></script>
+
+  <script src="script/Signup.js" type="module"></script>
+</body>
+
 </html>
