editted some little things

--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -9,7 +9,6 @@
   <link rel="icon" href="assets/diet_logo_t.png">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/diet-plan.css">
-  <link rel="stylesheet" href="login.html">
   <!-- <link rel="stylesheet" href="styles/test.css"> -->
   <link rel="stylesheet" href="styles/dashboard/dashboard.css">
 
@@ -34,9 +33,9 @@
       transition: width 0.5s ease;
     }
 
-    #progress-summary {
-      /* margin-bottom: 20px; */
-    }
+    /*#progress-summary {
+       margin-bottom: 20px; 
+    }*/
 
     .day-section {
       margin-bottom: 20px;
@@ -237,7 +236,7 @@
       <!-- <li><a href="#insights" onclick="showSection('insights')"><i class="fas fa-chart-line"></i> Insights</a></li> -->
       <!-- <li><a href="#dieticians" onclick="showSection('dieticians')"><i class="fas fa-users"></i> Dieticians</a></li> -->
       <!-- <li><a href="#settings" onclick="showSection('settings')"><i class="fas fa-cog"></i> Settings</a></li> -->
-      <li><a href="#logout" onclick="showSection('logout')"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+      <li><a href="login.html" onclick="showSection('logout')"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
     </ul>
     <a class="user-profile">
       <img src="assets/img-1.jpg" alt="user-profile">
