--- a/contactUs.html
+++ b/contactUs.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/contactUs.css" />
     <title>NourishWise Contact Us</title>
   </head>
@@ -16,7 +17,7 @@
         <ul class="nav-list" id="nav-list">
           <li>
             <!-- <i class="fas fa-bars"></i> -->
-            <a href="index.html">Home</a>
+            <a href="index-2.html">Home</a>
           </li>
           <li><a href="diet-plan.html">Diet Plan</a></li>
           <li><a href="insight.html">Insights</a></li>
