tried to fix the customer-dashboard.html

--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -220,7 +220,7 @@
     <ul>
       <li><a href="#dashboard" class="active" onclick="showSection('dashboard')"><i class="fas fa-tachometer-alt"></i>
           Dashboard </a></li>
-      <li><a href="#diet-plans" onclick="showSection('diet-plans')"><i class="fas fa-utensils"></i> Diet Plans</a></li>
+      <li><a href="index-2.html" onclick="showSection('index-2.html')"><i class="fas fa-house"></i> Home </a></li>
       <!-- <li><a href="#insights" onclick="showSection('insights')"><i class="fas fa-chart-line"></i> Insights</a></li> -->
       <!-- <li><a href="#dieticians" onclick="showSection('dieticians')"><i class="fas fa-users"></i> Dieticians</a></li> -->
       <!-- <li><a href="#settings" onclick="showSection('settings')"><i class="fas fa-cog"></i> Settings</a></li> -->
